# Shortest-Inspection-Path-Queries-in-Simple-Polygons

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg-configuration.json
Header/: approximatequery.h  common.h  generalcase.h  logredirect.h  mainwindow.h  onepointquery.h  polygongen.h  polygonwidget.h  shortestpath.h  twopointquery.h
Source/: approximatequery.cpp  generalcase.cpp  main.cpp  mainwindow.cpp  onepointquery.cpp  polygongen.cpp  polygonwidget.cpp  shortestpath.cpp  twopointquery.cpp
